--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,11 @@
       <artifactId>log4j</artifactId>
       <version>1.2.16</version>
     </dependency>
-
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.43</version>
+    </dependency>
     <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-core &ndash;&gt;-->
     <!--<dependency>-->
       <!--<groupId>org.apache.spark</groupId>-->
