--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 #key=values
 #数据库地址
-url=jdbc:mysql://localhost:3306/graduation_design
+url=jdbc:mysql://120.79.24.24:3306/graduation_design
 #驱动名
 driverName=com.mysql.jdbc.Driver
 #用户名
