分词 存入数据库

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,10 +1,10 @@
 #key=values
 #数据库地址
-url=jdbc:mysql://120.79.24.24:3306/graduation_design?characterEncoding=utf-8
+url=jdbc:mysql://localhost:3306/graduation_design?characterEncoding=utf-8
 #url=jdbc:mysql://localhost:3306/graduation_design?characterEncoding=utf-8
 #连接驱动
 driverName=com.mysql.jdbc.Driver
 #连接用户
 user=root
 #连接密码
-password=1234
+password=
