--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.ansj/ansj_seg -->
-    <dependency>
-      <groupId>org.ansj</groupId>
-      <artifactId>ansj_seg</artifactId>
-      <version>5.1.6</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.ansj</groupId>-->
+      <!--<artifactId>ansj_seg</artifactId>-->
+      <!--<version>5.1.6</version>-->
+    <!--</dependency>-->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -56,11 +56,11 @@
 
 
     <!-- https://mvnrepository.com/artifact/com.huaban/jieba-analysis -->
-    <dependency>
-      <groupId>com.huaban</groupId>
-      <artifactId>jieba-analysis</artifactId>
-      <version>1.0.2</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>com.huaban</groupId>-->
+      <!--<artifactId>jieba-analysis</artifactId>-->
+      <!--<version>1.0.2</version>-->
+    <!--</dependency>-->
 
     <!-- https://mvnrepository.com/artifact/org.apdplat/word -->
     <dependency>
@@ -68,28 +68,6 @@
       <artifactId>word</artifactId>
       <version>1.3</version>
     </dependency>
-
-
-
-
-    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-core &ndash;&gt;-->
-    <!--<dependency>-->
-      <!--<groupId>org.apache.spark</groupId>-->
-      <!--<artifactId>spark-core_2.11</artifactId>-->
-      <!--<version>2.1.0</version>-->
-    <!--</dependency>-->
-    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-sql &ndash;&gt;-->
-    <!--<dependency>-->
-      <!--<groupId>org.apache.spark</groupId>-->
-      <!--<artifactId>spark-sql_2.11</artifactId>-->
-      <!--<version>2.1.0</version>-->
-    <!--</dependency>-->
-    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.nlpcn/nlp-lang &ndash;&gt;-->
-    <!--<dependency>-->
-      <!--<groupId>org.nlpcn</groupId>-->
-      <!--<artifactId>nlp-lang</artifactId>-->
-      <!--<version>1.7.2</version>-->
-    <!--</dependency>-->
 
 
   </dependencies>
@@ -104,6 +82,31 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <archive>
+            <manifest>
+              <mainClass>com.caiw.job.GetData</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+
     </plugins>
   </build>
 
