--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,10 @@
   <groupId>com.caiw</groupId>
   <artifactId>GraduationDesign</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <modules>
+        <module>get_data</module>
+    </modules>
+    <packaging>pom</packaging>
 
   <name>GraduationDesign</name>
   <url>http://maven.apache.org</url>
