--- a/analyse/pom.xml
+++ b/analyse/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>analyse</artifactId>
+    <artifactId>screen</artifactId>
 
     <dependencyManagement>
         <dependencies>
