--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>get_data</module>
       <module>analyse</module>
+      <module>term_score</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -31,12 +32,12 @@
       <version>1.8.3</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.ansj/ansj_seg -->
-    <!--<dependency>-->
-      <!--<groupId>org.ansj</groupId>-->
-      <!--<artifactId>ansj_seg</artifactId>-->
-      <!--<version>5.1.6</version>-->
-    <!--</dependency>-->
+     <!--https://mvnrepository.com/artifact/org.ansj/ansj_seg-->
+    <dependency>
+      <groupId>org.ansj</groupId>
+      <artifactId>ansj_seg</artifactId>
+      <version>5.1.6</version>
+    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
