项目完善，将分词换成了实时分词，爬取的词放入了kafka中，spark streaming获取实时做分词

--- a/get_data/pom.xml
+++ b/get_data/pom.xml
@@ -52,7 +52,10 @@
                 <version>5.1.43</version>
             </dependency>
 
-
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+            </dependency>
             <!-- https://mvnrepository.com/artifact/com.huaban/jieba-analysis -->
             <!--<dependency>-->
             <!--<groupId>com.huaban</groupId>-->
