--- a/get_data/pom.xml
+++ b/get_data/pom.xml
@@ -70,7 +70,14 @@
                 <version>1.3</version>
             </dependency>
 
-
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-client</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-hdfs</artifactId>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
