--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <hadoop-version>2.6.5</hadoop-version>
   </properties>
 
   <dependencies>
@@ -73,6 +74,17 @@
       <groupId>org.apdplat</groupId>
       <artifactId>word</artifactId>
       <version>1.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-client</artifactId>
+      <version>${hadoop-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-hdfs</artifactId>
+      <version>${hadoop-version}</version>
     </dependency>
 
     <dependency>
