阿里云  kafka端口  hostname

--- a/get_data/src/main/resources/producer.properties
+++ b/get_data/src/main/resources/producer.properties
@@ -1,7 +1,8 @@
 #用于配置cluster中borker的host/port对。如果要配置多项，格式是：host1:port1,host2:port2,host3:port3….
 #bootstrap.servers=192.168.23.121:9092,192.168.23.122:9092,192.168.23.123:9092
 #bootstrap.servers=192.168.200.11:9092
-bootstrap.servers=120.79.24.24:9092
+#bootstrap.servers=120.79.24.24:9092
+bootstrap.servers=47.106.142.94:9092
 #RecordBatch的最大容量。默认值是16384（16KB）。
 batch.size=1024
 #Socket ：solinger。延迟。默认值：0ms，即不延迟。
