--- a/term_score/src/main/resources/terms.properties
+++ b/term_score/src/main/resources/terms.properties
@@ -1,3 +1,10 @@
+#stockCode=900905
 affirmative=吸纳 可入 介入 加仓 跟进
 negativeWords=离场 减磅 不 减仓 出局 出货
-screenWords=中线 入货 品种 图形 小幅 平台 庄家 建议 强势 形态 成交量 整理 横盘 特征 筹码 股价 能量 走势 趋势 跌势
+#screenWords=中线 入货 品种 图形 小幅 平台 庄家 建议 强势 形态 成交量 整理 横盘 特征 筹码 股价 能量 走势 趋势 跌势
+#宏观词
+macroscopicTerms=意义 曙光 形态 平台 走势 大盘 能量 空间
+#微观词
+microcosmicTerms=特征 横向 趋势 建议 多头 均线
+#市场层面词
+marketTerms=成交量 股价 强势 跌势 新股
