--- a/get_data/pom.xml
+++ b/get_data/pom.xml
@@ -11,7 +11,6 @@
 
     <artifactId>get_data</artifactId>
 
-    <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>junit</groupId>
@@ -26,11 +25,11 @@
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.ansj/ansj_seg -->
-            <!--<dependency>-->
-            <!--<groupId>org.ansj</groupId>-->
-            <!--<artifactId>ansj_seg</artifactId>-->
-            <!--<version>5.1.6</version>-->
-            <!--</dependency>-->
+            <dependency>
+            <groupId>org.ansj</groupId>
+            <artifactId>ansj_seg</artifactId>
+            <version>5.1.6</version>
+            </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -64,12 +63,12 @@
             <!--<version>1.0.2</version>-->
             <!--</dependency>-->
 
-            <!-- https://mvnrepository.com/artifact/org.apdplat/word -->
-            <dependency>
-                <groupId>org.apdplat</groupId>
-                <artifactId>word</artifactId>
-                <version>1.3</version>
-            </dependency>
+            <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apdplat/word &ndash;&gt;-->
+            <!--<dependency>-->
+                <!--<groupId>org.apdplat</groupId>-->
+                <!--<artifactId>word</artifactId>-->
+                <!--<version>1.3</version>-->
+            <!--</dependency>-->
 
             <dependency>
                 <groupId>org.apache.hadoop</groupId>
@@ -82,13 +81,13 @@
                 <version>2.6.5</version>
             </dependency>
         </dependencies>
-    </dependencyManagement>
 
 
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.0.0</version>
                 <configuration>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
