--- a/pom.xml
+++ b/pom.xml
@@ -21,97 +21,97 @@
     <hadoop-version>2.6.5</hadoop-version>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
-    <dependency>
-      <groupId>org.jsoup</groupId>
-      <artifactId>jsoup</artifactId>
-      <version>1.8.3</version>
-    </dependency>
-
-     <!--https://mvnrepository.com/artifact/org.ansj/ansj_seg-->
-    <dependency>
-      <groupId>org.ansj</groupId>
-      <artifactId>ansj_seg</artifactId>
-      <version>5.1.6</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.6.6</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>1.6.6</version>
-    </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.16</version>
-    </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.43</version>
-    </dependency>
-
-
-    <!-- https://mvnrepository.com/artifact/com.huaban/jieba-analysis -->
+  <!--<dependencies>-->
     <!--<dependency>-->
-      <!--<groupId>com.huaban</groupId>-->
-      <!--<artifactId>jieba-analysis</artifactId>-->
-      <!--<version>1.0.2</version>-->
+      <!--<groupId>junit</groupId>-->
+      <!--<artifactId>junit</artifactId>-->
+      <!--<version>4.12</version>-->
+    <!--</dependency>-->
+    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.jsoup/jsoup &ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>org.jsoup</groupId>-->
+      <!--<artifactId>jsoup</artifactId>-->
+      <!--<version>1.8.3</version>-->
     <!--</dependency>-->
 
-    <!-- https://mvnrepository.com/artifact/org.apdplat/word -->
-    <dependency>
-      <groupId>org.apdplat</groupId>
-      <artifactId>word</artifactId>
-      <version>1.3</version>
-    </dependency>
+     <!--&lt;!&ndash;https://mvnrepository.com/artifact/org.ansj/ansj_seg&ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>org.ansj</groupId>-->
+      <!--<artifactId>ansj_seg</artifactId>-->
+      <!--<version>5.1.6</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.slf4j</groupId>-->
+      <!--<artifactId>slf4j-api</artifactId>-->
+      <!--<version>1.6.6</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.slf4j</groupId>-->
+      <!--<artifactId>slf4j-log4j12</artifactId>-->
+      <!--<version>1.6.6</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>log4j</groupId>-->
+      <!--<artifactId>log4j</artifactId>-->
+      <!--<version>1.2.16</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>mysql</groupId>-->
+      <!--<artifactId>mysql-connector-java</artifactId>-->
+      <!--<version>5.1.43</version>-->
+    <!--</dependency>-->
 
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-client</artifactId>
-      <version>${hadoop-version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-hdfs</artifactId>
-      <version>${hadoop-version}</version>
-    </dependency>
 
-    <dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka-clients</artifactId>
-      <version>0.10.0.0</version>
-    </dependency>
+    <!--&lt;!&ndash; https://mvnrepository.com/artifact/com.huaban/jieba-analysis &ndash;&gt;-->
+    <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+      <!--&lt;!&ndash;<groupId>com.huaban</groupId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<artifactId>jieba-analysis</artifactId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<version>1.0.2</version>&ndash;&gt;-->
+    <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
 
-    <dependency>
-      <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_2.11</artifactId>
-      <version>2.1.0</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming -->
-    <dependency>
-      <groupId>org.apache.spark</groupId>
-      <artifactId>spark-streaming_2.11</artifactId>
-      <version>2.1.0</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka-0-10 -->
-    <dependency>
-      <groupId>org.apache.spark</groupId>
-      <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
-      <version>2.1.0</version>
-    </dependency>
+    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apdplat/word &ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>org.apdplat</groupId>-->
+      <!--<artifactId>word</artifactId>-->
+      <!--<version>1.3</version>-->
+    <!--</dependency>-->
 
-  </dependencies>
+    <!--<dependency>-->
+      <!--<groupId>org.apache.hadoop</groupId>-->
+      <!--<artifactId>hadoop-client</artifactId>-->
+      <!--<version>${hadoop-version}</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.hadoop</groupId>-->
+      <!--<artifactId>hadoop-hdfs</artifactId>-->
+      <!--<version>${hadoop-version}</version>-->
+    <!--</dependency>-->
+
+    <!--<dependency>-->
+      <!--<groupId>org.apache.kafka</groupId>-->
+      <!--<artifactId>kafka-clients</artifactId>-->
+      <!--<version>0.10.0.0</version>-->
+    <!--</dependency>-->
+
+    <!--<dependency>-->
+      <!--<groupId>org.apache.spark</groupId>-->
+      <!--<artifactId>spark-core_2.11</artifactId>-->
+      <!--<version>2.1.0</version>-->
+    <!--</dependency>-->
+    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-streaming &ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.spark</groupId>-->
+      <!--<artifactId>spark-streaming_2.11</artifactId>-->
+      <!--<version>2.1.0</version>-->
+    <!--</dependency>-->
+    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka-0-10 &ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.spark</groupId>-->
+      <!--<artifactId>spark-streaming-kafka-0-10_2.11</artifactId>-->
+      <!--<version>2.1.0</version>-->
+    <!--</dependency>-->
+
+  <!--</dependencies>-->
 
   <build>
     <plugins>
