--- a/pom.xml
+++ b/pom.xml
@@ -21,45 +21,50 @@
     <hadoop-version>2.6.5</hadoop-version>
   </properties>
 
-  <!--<dependencies>-->
-    <!--<dependency>-->
-      <!--<groupId>junit</groupId>-->
-      <!--<artifactId>junit</artifactId>-->
-      <!--<version>4.12</version>-->
-    <!--</dependency>-->
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
     <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.jsoup/jsoup &ndash;&gt;-->
-    <!--<dependency>-->
-      <!--<groupId>org.jsoup</groupId>-->
-      <!--<artifactId>jsoup</artifactId>-->
-      <!--<version>1.8.3</version>-->
-    <!--</dependency>-->
 
+  <dependency>
+    <groupId>org.jsoup</groupId>
+    <artifactId>jsoup</artifactId>
+    <version>1.8.3</version>
+  </dependency>
      <!--&lt;!&ndash;https://mvnrepository.com/artifact/org.ansj/ansj_seg&ndash;&gt;-->
-    <!--<dependency>-->
-      <!--<groupId>org.ansj</groupId>-->
-      <!--<artifactId>ansj_seg</artifactId>-->
-      <!--<version>5.1.6</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>org.slf4j</groupId>-->
-      <!--<artifactId>slf4j-api</artifactId>-->
-      <!--<version>1.6.6</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>org.slf4j</groupId>-->
-      <!--<artifactId>slf4j-log4j12</artifactId>-->
-      <!--<version>1.6.6</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>log4j</groupId>-->
-      <!--<artifactId>log4j</artifactId>-->
-      <!--<version>1.2.16</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>mysql</groupId>-->
-      <!--<artifactId>mysql-connector-java</artifactId>-->
-      <!--<version>5.1.43</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.ansj</groupId>
+      <artifactId>ansj_seg</artifactId>
+      <version>5.1.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.6.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.6.6</version>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.16</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.11</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.43</version>
+    </dependency>
 
 
     <!--&lt;!&ndash; https://mvnrepository.com/artifact/com.huaban/jieba-analysis &ndash;&gt;-->
@@ -70,11 +75,11 @@
     <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
 
     <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apdplat/word &ndash;&gt;-->
-    <!--<dependency>-->
-      <!--<groupId>org.apdplat</groupId>-->
-      <!--<artifactId>word</artifactId>-->
-      <!--<version>1.3</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.apdplat</groupId>
+      <artifactId>word</artifactId>
+      <version>1.3</version>
+    </dependency>
 
     <!--<dependency>-->
       <!--<groupId>org.apache.hadoop</groupId>-->
@@ -111,7 +116,7 @@
       <!--<version>2.1.0</version>-->
     <!--</dependency>-->
 
-  <!--</dependencies>-->
+  </dependencies>
 
   <build>
     <plugins>
