--- a/pom.xml
+++ b/pom.xml
@@ -21,102 +21,102 @@
     <hadoop-version>2.6.5</hadoop-version>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-    </dependency>
-    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.jsoup/jsoup &ndash;&gt;-->
+  <!--<dependencies>-->
+    <!--<dependency>-->
+      <!--<groupId>junit</groupId>-->
+      <!--<artifactId>junit</artifactId>-->
+      <!--<version>4.12</version>-->
+    <!--</dependency>-->
+    <!--&lt;!&ndash;&lt;!&ndash; https://mvnrepository.com/artifact/org.jsoup/jsoup &ndash;&gt;&ndash;&gt;-->
 
-  <dependency>
-    <groupId>org.jsoup</groupId>
-    <artifactId>jsoup</artifactId>
-    <version>1.8.3</version>
-  </dependency>
-     <!--&lt;!&ndash;https://mvnrepository.com/artifact/org.ansj/ansj_seg&ndash;&gt;-->
-    <dependency>
-      <groupId>org.ansj</groupId>
-      <artifactId>ansj_seg</artifactId>
-      <version>5.1.6</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.6.6</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>1.6.6</version>
-    </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.16</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
-      <version>1.11</version>
-    </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.43</version>
-    </dependency>
+  <!--<dependency>-->
+    <!--<groupId>org.jsoup</groupId>-->
+    <!--<artifactId>jsoup</artifactId>-->
+    <!--<version>1.8.3</version>-->
+  <!--</dependency>-->
+     <!--&lt;!&ndash;&lt;!&ndash;https://mvnrepository.com/artifact/org.ansj/ansj_seg&ndash;&gt;&ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>org.ansj</groupId>-->
+      <!--<artifactId>ansj_seg</artifactId>-->
+      <!--<version>5.1.6</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.slf4j</groupId>-->
+      <!--<artifactId>slf4j-api</artifactId>-->
+      <!--<version>1.6.6</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.slf4j</groupId>-->
+      <!--<artifactId>slf4j-log4j12</artifactId>-->
+      <!--<version>1.6.6</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>log4j</groupId>-->
+      <!--<artifactId>log4j</artifactId>-->
+      <!--<version>1.2.16</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>commons-codec</groupId>-->
+      <!--<artifactId>commons-codec</artifactId>-->
+      <!--<version>1.11</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>mysql</groupId>-->
+      <!--<artifactId>mysql-connector-java</artifactId>-->
+      <!--<version>5.1.43</version>-->
+    <!--</dependency>-->
 
 
-    <!--&lt;!&ndash; https://mvnrepository.com/artifact/com.huaban/jieba-analysis &ndash;&gt;-->
+    <!--&lt;!&ndash;&lt;!&ndash; https://mvnrepository.com/artifact/com.huaban/jieba-analysis &ndash;&gt;&ndash;&gt;-->
+    <!--&lt;!&ndash;&lt;!&ndash;<dependency>&ndash;&gt;&ndash;&gt;-->
+      <!--&lt;!&ndash;&lt;!&ndash;<groupId>com.huaban</groupId>&ndash;&gt;&ndash;&gt;-->
+      <!--&lt;!&ndash;&lt;!&ndash;<artifactId>jieba-analysis</artifactId>&ndash;&gt;&ndash;&gt;-->
+      <!--&lt;!&ndash;&lt;!&ndash;<version>1.0.2</version>&ndash;&gt;&ndash;&gt;-->
+    <!--&lt;!&ndash;&lt;!&ndash;</dependency>&ndash;&gt;&ndash;&gt;-->
+
+    <!--&lt;!&ndash;&lt;!&ndash; https://mvnrepository.com/artifact/org.apdplat/word &ndash;&gt;&ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>org.apdplat</groupId>-->
+      <!--<artifactId>word</artifactId>-->
+      <!--<version>1.3</version>-->
+    <!--</dependency>-->
+
     <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
-      <!--&lt;!&ndash;<groupId>com.huaban</groupId>&ndash;&gt;-->
-      <!--&lt;!&ndash;<artifactId>jieba-analysis</artifactId>&ndash;&gt;-->
-      <!--&lt;!&ndash;<version>1.0.2</version>&ndash;&gt;-->
+      <!--&lt;!&ndash;<groupId>org.apache.hadoop</groupId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<artifactId>hadoop-client</artifactId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<version>${hadoop-version}</version>&ndash;&gt;-->
+    <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
+    <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+      <!--&lt;!&ndash;<groupId>org.apache.hadoop</groupId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<artifactId>hadoop-hdfs</artifactId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<version>${hadoop-version}</version>&ndash;&gt;-->
     <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
 
-    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apdplat/word &ndash;&gt;-->
-    <dependency>
-      <groupId>org.apdplat</groupId>
-      <artifactId>word</artifactId>
-      <version>1.3</version>
-    </dependency>
+    <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+      <!--&lt;!&ndash;<groupId>org.apache.kafka</groupId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<artifactId>kafka-clients</artifactId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<version>0.10.0.0</version>&ndash;&gt;-->
+    <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
 
-    <!--<dependency>-->
-      <!--<groupId>org.apache.hadoop</groupId>-->
-      <!--<artifactId>hadoop-client</artifactId>-->
-      <!--<version>${hadoop-version}</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>org.apache.hadoop</groupId>-->
-      <!--<artifactId>hadoop-hdfs</artifactId>-->
-      <!--<version>${hadoop-version}</version>-->
-    <!--</dependency>-->
+    <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+      <!--&lt;!&ndash;<groupId>org.apache.spark</groupId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<artifactId>spark-core_2.11</artifactId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<version>2.1.0</version>&ndash;&gt;-->
+    <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
+    <!--&lt;!&ndash;&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-streaming &ndash;&gt;&ndash;&gt;-->
+    <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+      <!--&lt;!&ndash;<groupId>org.apache.spark</groupId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<artifactId>spark-streaming_2.11</artifactId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<version>2.1.0</version>&ndash;&gt;-->
+    <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
+    <!--&lt;!&ndash;&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka-0-10 &ndash;&gt;&ndash;&gt;-->
+    <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+      <!--&lt;!&ndash;<groupId>org.apache.spark</groupId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<artifactId>spark-streaming-kafka-0-10_2.11</artifactId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<version>2.1.0</version>&ndash;&gt;-->
+    <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
 
-    <!--<dependency>-->
-      <!--<groupId>org.apache.kafka</groupId>-->
-      <!--<artifactId>kafka-clients</artifactId>-->
-      <!--<version>0.10.0.0</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-      <!--<groupId>org.apache.spark</groupId>-->
-      <!--<artifactId>spark-core_2.11</artifactId>-->
-      <!--<version>2.1.0</version>-->
-    <!--</dependency>-->
-    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-streaming &ndash;&gt;-->
-    <!--<dependency>-->
-      <!--<groupId>org.apache.spark</groupId>-->
-      <!--<artifactId>spark-streaming_2.11</artifactId>-->
-      <!--<version>2.1.0</version>-->
-    <!--</dependency>-->
-    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka-0-10 &ndash;&gt;-->
-    <!--<dependency>-->
-      <!--<groupId>org.apache.spark</groupId>-->
-      <!--<artifactId>spark-streaming-kafka-0-10_2.11</artifactId>-->
-      <!--<version>2.1.0</version>-->
-    <!--</dependency>-->
-
-  </dependencies>
+  <!--</dependencies>-->
 
   <build>
     <plugins>
