--- a/analyse/src/main/resources/jdbc.properties
+++ b/analyse/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 #key=values
 #数据库地址
 #url=jdbc:mysql://localhost:3306/graduation_design?characterEncoding=utf-8
-url=jdbc:mysql://192.168.200.11:3306/graduation_design?characterEncoding=utf-8
+url=jdbc:mysql://cw01:3306/graduation_design?characterEncoding=utf-8
 #连接驱动
 driverName=com.mysql.jdbc.Driver
 #连接用户
